@@ -1,4 +1,4 @@
-<!-- start of $Id: menu_mail.php,v 1.39 2006/11/22 14:27:18 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_mail.php,v 1.40 2007/12/12 22:04:54 gerundt Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -7,7 +7,7 @@
   <table>
     <tr>
       <td class="menu">
-        <a href="<?php echo $_SERVER['PHP_SELF'] ?>"><?php if ($_SESSION['nocc_folder'] != 'INBOX') { echo $_SESSION['nocc_folder']; } else { echo convertLang2Html($html_inbox); } ?></a>
+        <a href="<?php echo $_SERVER['PHP_SELF'] ?>"><?php echo convertLang2Html($html_inbox); ?></a>
       </td>
       <td class="menu">
         <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=write"><?php echo convertLang2Html($html_new_msg) ?></a>
@@ -30,4 +30,4 @@
     </tr>
   </table>
 </div>
-<!-- end of $Id: menu_mail.php,v 1.39 2006/11/22 14:27:18 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_mail.php,v 1.40 2007/12/12 22:04:54 gerundt Exp $ -->
